feat: add search with Apache Lucene & Hibernate Search